--- a/src/assets/lang/es.json
+++ b/src/assets/lang/es.json
@@ -1,4 +1,5 @@
 {
+    "loremIpsum": "Quisque ac dui euismod, commodo tellus in, aliquam lorem. Nam auctor sem sed elementum fringilla. Nulla sit amet risus magna. Etiam est augue, hendrerit",
     "mainNav": {
         "list": "Lista",
         "kanban": "Kanban",
