Shared task filter

--- a/src/assets/lang/en.json
+++ b/src/assets/lang/en.json
@@ -48,6 +48,9 @@
                 "move": "move"
             }
         },
-        "addTaskButton": "Add task"
+        "addTaskButton": "Add task",
+        "filter": {
+            "name": "Filter by task name..."
+        }
     }
 }
